--- a/openvidu-components-angular/projects/openvidu-components-angular/src/lib/components/panel/chat-panel/chat-panel.component.scss
+++ b/openvidu-components-angular/projects/openvidu-components-angular/src/lib/components/panel/chat-panel/chat-panel.component.scss
@@ -77,7 +77,7 @@
 	color: var(--ov-panel-text-color);
 }
 
-.msg-content {
+.chat-message {
 	position: relative;
 	border-radius: var(--ov-panel-radius);
 	padding: 8px;
@@ -102,7 +102,7 @@
 	text-align: left;
 }
 
-.message.left .msg-detail .msg-content {
+.message.left .msg-detail .chat-message {
 	float: left;
 }
 
@@ -114,7 +114,7 @@
 	text-align: right;
 }
 
-.message.right .msg-detail .msg-content {
+.message.right .msg-detail .chat-message {
 	float: right;
 }
 
