--- a/openvidu-components-angular/src/app/testing-app/testing.component.scss
+++ b/openvidu-components-angular/src/app/testing-app/testing.component.scss
@@ -1,6 +1,7 @@
 section {
 	display: flex;
     justify-content: center;
+	max-height: 300px;
 }
 
 ul {
@@ -17,8 +18,9 @@ ul {
   .directive-container {
 	  border: 1px solid;
 	  border-top: 0px;
-	  margin: 10px;
-	  padding: 5px;
+	//   margin: 10px;
+	//   padding: 5px;
+	  height: fit-content;
   }
 
   h4 {
