--- a/openvidu-components-angular/projects/openvidu-components-angular/src/lib/components/panel/activities-panel/broadcasting-activity/broadcasting-activity.component.scss
+++ b/openvidu-components-angular/projects/openvidu-components-angular/src/lib/components/panel/activities-panel/broadcasting-activity/broadcasting-activity.component.scss
@@ -52,7 +52,7 @@
 	color: var(--ov-panel-text-color) !important;
 }
 
-.pending {
+.starting {
 	background-color: #ffd79b !important;
 	color: var(--ov-panel-text-color) !important;
 }
