--- a/openvidu-components-angular/projects/openvidu-components-angular/src/lib/components/panel/activities-panel/recording-activity/recording-activity.component.scss
+++ b/openvidu-components-angular/projects/openvidu-components-angular/src/lib/components/panel/activities-panel/recording-activity/recording-activity.component.scss
@@ -54,7 +54,7 @@
 		color: var(--ov-panel-text-color) !important;
 	}
 
-	.pending {
+	.starting {
 		background-color: #ffd79b !important;
 		color: var(--ov-panel-text-color) !important;
 	}
