--- a/openvidu-testapp/src/app/components/openvidu-instance/openvidu-instance.component.html
+++ b/openvidu-testapp/src/app/components/openvidu-instance/openvidu-instance.component.html
@@ -19,7 +19,7 @@
 
                     <div class="room-btns-div">
                         <button mat-icon-button title="Room options" [id]="'room-options-btn-' + index"
-                            class="mat-icon-custom" (click)="openRoomOptionsDialog()" [disabled]="room">
+                            class="mat-icon-custom" (click)="openOptionsDialog()" [disabled]="room">
                             <mat-icon class="mat-icon-custom-ic" aria-label="Room options button">settings</mat-icon>
                         </button>
                         <button mat-icon-button title="Room API" [id]="'room-api-btn-' + index" class="mat-icon-custom"
